# niagads-pylib

./: .buildinfo  .env  .gitignore  2  LICENSE  README.md  TODO.md  __init__.py  alzheimer_articles_test.csv  alzheimer_articles_train.csv  alzheimer_keywords.csv  auto_viv_dict.py  build_docs.sh  check_broken_niagads_imports.py  filtered_articles.csv  generate_docs.sh  genindex.html  index.html  new_alzheimer_articles.csv  new_alzheimer_articles_20250401_195403.csv  objects.inv  pubmed_analyzer.py  py-modindex.html  pyproject.toml  requirements.txt  resources.md  search.html  searchindex.js  setup.py  track.py  workspace.toml  year_journal_distribution.csv
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
_apidocs/: modules.html  niagads.annotators.html  niagads.api_wrapper.html  niagads.api_wrapper.records.html  niagads.db.html  niagads.db.postgres.html  (+11 more)
projects/examples/: pyproject.toml
projects/examples/jsonschema-metadata-validation/: README.md  example.ipynb
projects/examples/jsonschema-metadata-validation/metadata_files/: test_file_manifest.tab
projects/examples/jsonschema-metadata-validation/schemas/: file_manifest.json
projects/examples/niagads-metadata-validator/: README.md  example.ipynb
projects/examples/niagads-metadata-validator/schemas/: sample_info.json
projects/genomicsdb-loader/: pyproject.toml
projects/genomicsdb-loader/scripts/schemas/metadata/track/: load_tracks_from_FILER_template.py
projects/genomicsdb-schema-manager/: .dockerignore  Dockerfile  README.md  TODO.md  alembic.ini  developer-notes.md  docker-compose.yml  metadata_diff.py  pyproject.toml
projects/genomicsdb-schema-manager/alembic/: env.py  script.py.mako
projects/genomicsdb-schema-manager/alembic/helpers/: config.py  migration_context.py  schemas.py
projects/genomicsdb-schema-manager/alembic/versions/: 0e1860eae982_update_interval_bin.py  110c98d804f0_add_cohorts_to_track.py  13e014654c46_initial_dataset_schema_creation.py  13e014654c46_initial_metadata_schema_creation.py  19ad973d6dd4_make_cohorts_nullable.py  23770b2f34a2_adjust_unique_constraint_on_gene_.py  29b512b4986d_gene_model_and_genomic_range_update.py  2c33d393d0ed_genome_reference.py  2f82dc461aa6_create_shared_base_and_remove_source_id_.py  30310a2872a4_initial_metadata_schema_and_tables.py  316c03b524f6_alter_processstatus_constraint.py  380bbd3b1ca8_create_index_schema_and_add_.py  380bbd3b1ca8_create_track_interval_.py  420ad450f741_lost_place_holder.py  44faa8902d2b_initial_metadata_schema_and_tables.py  50ce76e266e0_add_is_test_run_column_to_etlrun_table.py  52008ce12f18_remove_track_store.py  534a515922f4_make_message_nullable.py  583401c0c89c_create_all_schema.py  585693ba2e34_correct_dataset_schema_index_names_and_.py  5e374acb63e8_add_missing_study_diagnosis_field.py  5e732b6e9650_add_primary_key_field_to_collection.py  714bb87b2e07_add_dataset_type_database_type.py  72aeb75078c5_add_dataset_type_foreign_key.py  765dc0a086d4_extensions.py  7a08c8e32e5f_fix_xref_type_enum.py  7d80ca04cf3b_centralize_embeddings.py  861b41eb4f51_make_collection_primary_key_field_non_.py  8b0e7273166f_add_missing_external_database_release_.py  92f691d5d7d8_increase_gene_name_size.py  9485a8a53079_admin_schema_initialization.py  955ccc8282d0_alter_gene_type_id_to_map_to_ontology_.py  9a6803b55ca8_gene_xref_update.py  9fc415e7b82c_create_refsnpalias_variant_table.py  a02c08bd426e_initialize_admin_schema.py  a440afb1263f_initial_table_creation_all_schemas.py  b6cb6e6eb91e_add_proteinxref_table.py  c0db04b496b9_initial_table_creation_all_schemas.py  c3269683f796_make_is_download_only_nullable.py  c6ce923672fe_increase_size_of_ontologyterm_source_id.py  (+17 more)
projects/genomicsdb-schema-manager/database/: schemas.py
projects/genomicsdb-schema-manager/helpers/: config.py  constants.py  hooks.py  migration_context.py  migration_runner.py  types.py
projects/genomicsdb-schema-manager/initialize-db/: README.md  boostrap_db.sh  create_admin_views.sh  create_partitioned_variant_tables.sh
projects/genomicsdb-schema-manager/scripts/: alembic_wrapper.py  boostrap_db.sh  create_db_user.py  generate_initial_migration.sh  generate_initial_migrations.sh  generate_migration.py  generate_migration.sh  metadata_diff.py  remove_db_user.py
projects/genomicsdb-schema-manager/sql/bootstrap/: create_extensions.sql  create_roles.sql
projects/genomicsdb-schema-manager/sql/functions/: format_helpers.sql
projects/genomicsdb-schema-manager/sql/schemas/admin/views/: create_lock_monitor.sql  create_relation_size_trackers.sql  create_user_defined_functions.sql
projects/genomicsdb-schema-manager/sql/schemas/gene/materialized_views/: document.sql
projects/genomicsdb-schema-manager/sql/schemas/variant/: create_schema.sql
projects/genomicsdb-schema-manager/sql/schemas/variant/functions/: create_chrm_partitions.sql
projects/genomicsdb-schema-manager/sql/schemas/variant/tables/: create_variant_table.sql
projects/jsonschema-metadata-validation/: README.md  README.md.tmp  pyproject.toml
projects/jsonschema-metadata-validation/docs/: core.py.md
projects/metadata-builder/: Dockerfile  README.md  docker-compose.yaml  ontology_reference.txt  pyproject.toml  requirements.txt  streamlit_app.py
projects/metadata-validation/: pyproject.toml
projects/niagads-metadata-validator/: CHANGELOG.md  README.md  pyproject.toml
projects/open-access-api/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sample.env
projects/ragdoc-admin-service/: Dockerfile  docker-compose.yaml  pyproject.toml
projects/ragdoc-api-service/: Dockerfile  docker-compose.yaml  pyproject.toml
projects/schema-inspector/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sample.env
projects/schema-inspector/templates/: index.html  results.html
projects/utils/: __init__.py  pyproject.toml
projects/variant-annotator/: README.md  docker-compose.yaml  monitor_idle_containers.sh  pyproject.toml  sample.env
projects/variant-annotator/data/: vcf_header.txt
projects/variant-annotator/scripts/: initialize_vep.sh  vep.sh  vep_runner.py
(+1362 files in other folders)
