[project]
name = "ai-bibliography-analysis"
version = "0.1.0-alpha"
description = "scripts for doing a AI-based analysis of a selected AD-related collection of pubmed articles"
authors = [
    { name = "fossilfriend", email = "egreenfest@gmail.com" },
    { name = "Maxwell Zhang" },
]
license = { text = "GNU GPLv3" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "metapub (>=0.5.12,<0.6.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    # note: spacy does not work w/Python > 3.13
    "spacy (>=3.8.5,<4.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "huggingface-hub[hf-xet] (>=0.30.2,<0.31.0)",
]

[tool.poetry]
packages = [{ include = "scripts" }]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
ipykernel = "^6.29.5"
isort = "^5.13.2"
lazydoc = "^1.0.1"
ipywidgets = "^8.1.6"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
