[tool.poetry]
packages = [
    { include = "niagads/metadata_validator_tool", from = "../../bases" },
    { include = "niagads/excel_parser", from = "../../components" },
    { include = "niagads/metadata_validator", from = "../../components" },
    { include = "niagads/exceptions", from = "../../components" },
    { include = "niagads/csv_parser", from = "../../components" },
    { include = "niagads/json_validator", from = "../../components" },
    { include = "niagads/csv_validator", from = "../../components" },
    { include = "niagads/enums", from = "../../components" },
    { include = "niagads/pd_dataframe", from = "../../components" },
    { include = "niagads/arg_parser", from = "../../components" },
    { include = "niagads/utils", from = "../../components" },
]

[project]
name = "examples"
description = "example usage of NIAGADS-pylib packages"
version = "0.1.0"

authors = [{ name = "fossilfriend", email = "egreenfest@gmail.com" }]

requires-python = ">=3.11,<4.0"

dependencies = [
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "strenum (>=0.4.15,<0.5.0)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
