[tool.poetry]
packages = [{ include = "metadata", from = "scripts/schemas" }]

[project]
name = "genomicsdb-loader"
version = "0.1.0"

authors = [{ name = "fossilfriend", email = "egreenfest@gmail.com" }]

requires-python = ">=3.11,<4.0"

dependencies = []

[project.scripts]
metadata-validator = "scripts.schemas.metadata.load_tracks_from_FILER_template.py:main"

[tool.tomlsort]
all = true
in_place = true
spaces_indent_inline_array = 4

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
