[project]
name = "genomicsdb-loader"
authors = [
    { name = "fossilfriend", email = "egreenfest@gmail.com" },
]
dependencies = [
    "aiohttp (>=3.11.18,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "psutil (>=7.1.0,<8.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "sqlalchemy-utils (>=0.42.0,<0.43.0)",
    "strenum (>=0.4.15,<0.5.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
]
requires-python = ">=3.11,<4.0"
version = "0.1.0"

[project.scripts]
gdbpexec = "niagads.pipeline_service.runners.core:run_main"
gdbpexec-plugin = "niagads.pipeline_service.runners.plugin:run_main"
gwas-migration = "niagads.genomicsdb_service.data_migration.migrate_legacy_gwas_to_hipFG_standard:main"

[tool.poetry]
packages = [
    { from = "../../bases", include = "niagads/genomicsdb_service/etl" },
    { from = "../../bases", include = "niagads/pipeline_service/runners" },
    { from = "../../bases", include = "niagads/genomicsdb_service/data_migration" },
    { from = "../../components", include = "niagads/arg_parser" },
    { from = "../../components", include = "niagads/genomics" },
    { from = "../../components", include = "niagads/cache" },
    { from = "../../components", include = "niagads/common" },
    { from = "../../components", include = "niagads/database" },
    { from = "../../components", include = "niagads/enums" },
    { from = "../../components", include = "niagads/exceptions" },
    { from = "../../components", include = "niagads/genomicsdb" },
    { from = "../../components", include = "niagads/metadata_parser" },
    { from = "../../components", include = "niagads/etl" },
    { from = "../../components", include = "niagads/requests" },
    { from = "../../components", include = "niagads/settings" },
    { from = "../../components", include = "niagads/utils" },
    { include = "niagads/api", from = "../../components" },
]


[tool.tomlsort]
all = true
in_place = true
spaces_indent_inline_array = 4

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]
