[tool.poetry]
packages = [
    { include = "niagads/metadata_validator_tool", from = "../../bases" },
    { include = "niagads/csv_validator", from = "../../components" },
    { include = "niagads/arg_parser", from = "../../components" },
    { include = "niagads/exceptions", from = "../../components" },
    { include = "niagads/metadata_validator", from = "../../components" },
    { include = "niagads/dict_utils", from = "../../components" },
    { include = "niagads/sys_utils", from = "../../components" },
    { include = "niagads/enums", from = "../../components" },
    { include = "niagads/list_utils", from = "../../components" },
    { include = "niagads/excel_parser", from = "../../components" },
    { include = "niagads/string_utils", from = "../../components" },
    { include = "niagads/pd_dataframe", from = "../../components" },
    { include = "niagads/logging_utils", from = "../../components" },
    { include = "niagads/json_validator", from = "../../components" },
    { include = "niagads/csv_parser", from = "../../components" },
]

[tool.poetry.group.dev.dependencies]
lazydocs = "^0.4.8"

[project]
name = "jsonschema-metadata-validation"
version = "0.1.0"

authors = [{ name = "fossilfriend", email = "egreenfest@gmail.com" }]

requires-python = ">=3.11,<4.0"

dependencies = [
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "strenum (>=0.4.15,<0.5.0)",
]

[project.scripts]
validate-metadata = "niagads.metadata_validator_tool:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
