[tool.poetry]
packages = [
    { from = "../../bases", include = "niagads/genomicsdb_service/" },
    { include = "niagads/enums", from = "../../components" },
    { include = "niagads/common", from = "../../components" },
    { include = "niagads/settings", from = "../../components" },
    { include = "niagads/requests", from = "../../components" },
    { include = "niagads/arg_parser", from = "../../components" },
    { include = "niagads/exceptions", from = "../../components" },
    { include = "niagads/genomics", from = "../../components" },
    { include = "niagads/api", from = "../../components" },
    { include = "niagads/utils", from = "../../components" },
]

[project]
name = "metadata-builder"
version = "0.1.0"

authors = [
    { name = "fossilfriend", email = "egreenfest@gmail.com" },
]

requires-python = ">=3.11,<3.14"

dependencies = [
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
