[tool.poetry]
packages = [
    { from = "../../bases", include = "niagads/genomicsdb_service/utilities/track_metadata_builder" },
    { include = "niagads/enums", from = "../../components" },
    { include = "niagads/common", from = "../../components" },
    { include = "niagads/settings", from = "../../components" },
    { include = "niagads/arg_parser", from = "../../components" },
    { include = "niagads/exceptions", from = "../../components" },
    { include = "niagads/genomics", from = "../../components" },
    { include = "niagads/utils", from = "../../components" },
]


include = [
    { path = "ontology_reference.txt" },
]

[project]
name = "metadata-builder"
version = "0.1.0"

authors = [
    { name = "fossilfriend", email = "egreenfest@gmail.com" },
]

requires-python = ">=3.11,<3.14"

dependencies = [
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "strenum (>=0.4.15,<0.5.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
