[project]
name = "metadata-builder"
authors = [
    { name = "fossilfriend", email = "egreenfest@gmail.com" },
]
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "strenum (>=0.4.15,<0.5.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
]
requires-python = ">=3.11,<3.14"
version = "0.1.0"

[tool.poetry]
packages = [
    { from = "../../components", include = "niagads/common" },
    { from = "../../components", include = "niagads/enums" },
    { from = "../../components", include = "niagads/exceptions" },
    { from = "../../components", include = "niagads/genome_reference" },
    { from = "../../components", include = "niagads/settings" },
    { from = "../../components", include = "niagads/utils" },
]

[tool.tomlsort]
all = true
in_place = true
spaces_indent_inline_array = 4

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]
