[tool.poetry]
packages = []

[project]
name = "metadata-validation"
version = "0.1.0"

authors = [{ name = "fossilfriend", email = "egreenfest@gmail.com" }]

requires-python = ">=3.11,<4.0"

dependencies = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
