[project]
name = "open-access-api"
authors = [
    {name = "fossilfriend", email = "egreenfest@gmail.com"}
]
dependencies = [
    "aiocache[redis] (>=0.12.3,<0.13.0)",
    "aiohttp[speedups] (>=3.12.12,<4.0.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "fastapi-cors (>=0.0.6,<0.0.7)",
    "nh3 (>=0.2.21,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pyparsing (>=3.2.3,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "starlette (>=0.46.2,<0.47.0)",
    "strenum (>=0.4.15,<0.5.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]
requires-python = ">=3.11,<4.0"
version = "1.1.0"

[tool.poetry]
packages = [
    {from = "../../bases", include = "niagads/filer/api"},
    {from = "../../bases", include = "niagads/genomicsdb"},
    {from = "../../bases", include = "niagads/genomicsdb/api"},
    {from = "../../bases", include = "niagads/open_access/api"},
    {from = "../../components", include = "niagads/api"},
    {from = "../../components", include = "niagads/assembly"},
    {from = "../../components", include = "niagads/cache"},
    {from = "../../components", include = "niagads/common"},
    {from = "../../components", include = "niagads/database"},
    {from = "../../components", include = "niagads/enums"},
    {from = "../../components", include = "niagads/exceptions"},
    {from = "../../components", include = "niagads/genomicsdb"},
    {from = "../../components", include = "niagads/requests"},
    {from = "../../components", include = "niagads/settings"},
    {from = "../../components", include = "niagads/utils"}
]

[tool.tomlsort]
all = true
in_place = true
spaces_indent_inline_array = 4

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0"
]
