[tool.poetry]
packages = [
    { from = "../../bases", include = "niagads/ragdoc_service" },
    { include = "niagads/exceptions", from = "../../components" },
    { include = "niagads/common", from = "../../components" },
    { include = "niagads/requests", from = "../../components" },
    { include = "niagads/nlp", from = "../../components" },
    { include = "niagads/database", from = "../../components" },
    { include = "niagads/settings", from = "../../components" },
    { include = "niagads/enums", from = "../../components" },
    { include = "niagads/genome_reference", from = "../../components" },
    { include = "niagads/utils", from = "../../components" },
    { include = "niagads/ragdoc", from = "../../components" },
]

[project]
name = "ragdoc-api-service"
version = "0.1.0"

authors = [
    { name = "fossilfriend", email = "egreenfest@gmail.com" },
]

requires-python = ">=3.11,<3.14"

dependencies = [
    "pydantic (>=2.13.1,<3.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "strenum (>=0.4.15,<0.5.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "transformers (>=5.5.4,<6.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "sqlalchemy-utils (>=0.42.1,<0.43.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "lxml (>=6.0.4,<7.0.0)",
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.tomlsort]
all = true
in_place = true
spaces_indent_inline_array = 4
