[project]
name = "schema-inspector"
authors = [
    { name = "NIAGADS", email = "betatesting@niagads.org" },
]
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "jinja2 (>=3.1.4,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
]
requires-python = ">=3.11,<4.0"
version = "0.0.1"

[tool.poetry]
packages = [
    { from = "../../bases", include = "niagads/schema_inspector_service" },
]

[tool.tomlsort]
all = true
in_place = true
spaces_indent_inline_array = 4

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]
