[tool.poetry]
name = "niagads-utils"
packages = [
    { include = "niagads/string", from = "components" },
    { include = "niagads/list", from = "components" },
    { include = "niagads/dict", from = "components" },
    { include = "niagads/enums", from = "components" },
    { include = "niagads/numeric", from = "components" },
    { include = "niagads/logging", from = "components" },
    { include = "niagads/exceptions", from = "components" },
    { include = "niagads/pd_dataframe", from = "components" },
    { include = "niagads/sys", from = "components" },
    { include = "niagads/decorators", from = "components" },
]

[project]
name = "niagads-utils"
version = "0.1.0"

authors = [{ name = "fossilfriend", email = "egreenfest@gmail.com" }]

requires-python = ">=3.12"

dependencies = ["python-dateutil (>=2.9.0.post0,<3.0.0)"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
