[tool.poetry]
name = "niagads-utils"
packages = [
    { include = "niagads/string", from = "../../components" },
    { include = "niagads/list", from = "../../components" },
    { include = "niagads/dict", from = "../../components" },
    { include = "niagads/enums", from = "../../components" },
    { include = "niagads/numeric", from = "../../components" },
    { include = "niagads/logging", from = "../../components" },
    { include = "niagads/exceptions", from = "../../components" },
    { include = "niagads/sys", from = "../../components" },
    { include = "niagads/decorators", from = "../../components" },
]

[tool.poetry.scripts]

[project]
name = "niagads-utils"
version = "0.0.1-alpha.0"

authors = [{ name = "fossilfriend", email = "egreenfest@gmail.com" }]

requires-python = ">=3.11,<4.0"

dependencies = [
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "strenum (>=0.4.15,<0.5.0)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
