
[project]
name = "variant-annotator"
version = "0.1.0"


authors = [
    { name = "fossilfriend", email = "egreenfest@gmail.com" },
]
dependencies = [
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "strenum (>=0.4.15,<0.5.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",

]
requires-python = ">=3.11,<3.14"


[tool.poetry]
packages = [
    { from = "../../components", include = "niagads/subprocess_manager" },
    { include = "niagads/common", from = "../../components" },
    { include = "niagads/enums", from = "../../components" },
    { include = "niagads/exceptions", from = "../../components" },
    { include = "niagads/genome_reference", from = "../../components" },
    { include = "niagads/utils", from = "../../components" },
    { include = "scripts" },
    {include = "niagads/arg_parser",from = "../../components"},
]


[project.scripts]
run-vep = "scripts.vep_runner:main"

[tool.tomlsort]
all = true
in_place = true
spaces_indent_inline_array = 4

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]
